tests/errors/user_function_block_missing.dang
# Test: user-defined function requires block argument

pub withBlock(&block(x: Int!): String!): String! {
	block(42)
}

# ERROR: function requires a block argument
pub result: String! = withBlock
